# multi-lamda-py

./: .gitignore  justfile  pyproject.toml  template.yaml
functions/order_service/: pyproject.toml
functions/order_service/src/order_service/: app.py
functions/order_service/tests/: test_app.py
functions/user_service/: pyproject.toml
functions/user_service/src/user_service/: app.py
functions/user_service/tests/: test_app.py
layers/common/: pyproject.toml
layers/common/src/commonlib/: utils.py
layers/common/tests/: test_utils.py
