[project]
name = "commonlib"
version = "0.1.0"
description = "Shared common utilities for SAM Lambdas"
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "aws-lambda-powertools",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.uv.sources]
commonlib = { path = "src/commonlib" }

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
